--- a/src/main/resources/com/example/tableau/hello-view.fxml
+++ b/src/main/resources/com/example/tableau/hello-view.fxml
@@ -12,9 +12,9 @@
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
-<Label text="Tableau récapitulatif des dépenses" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>  
+<Label text="Tableau récapitulatif des dépenses" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: blue;"/>  
 
-  <TableView fx:id="expenseTable">
+  <TableView fx:id="expenseTable" stylesheets="@style.css" VBox.vgrow="ALWAYS">
     <columns>
       <TableColumn text="Période" fx:id="periodeColumn"/>
       <TableColumn text="Total" fx:id="totalColumn"/>
