--- a/src/main/resources/com/example/tableau/hello-view.fxml
+++ b/src/main/resources/com/example/tableau/hello-view.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
@@ -12,9 +15,19 @@
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
-<Label text="Tableau récapitulatif des dépenses" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: blue;"/>  
+  <Label text="Tableau récapitulatif des dépenses"
+         style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: blue;"
+         contentDisplay="LEFT">
+    <graphic>
+      <ImageView fitHeight="24.0" fitWidth="24.0">
+        <image>
+          <Image url="@icon.png"/>
+        </image>
+      </ImageView>
+    </graphic>
+  </Label>
 
-  <TableView fx:id="expenseTable" stylesheets="@style.css" VBox.vgrow="ALWAYS">
+  <TableView fx:id="expenseTable" stylesheets="@style.css" prefHeight="300" VBox.vgrow="ALWAYS">
     <columns>
       <TableColumn text="Période" fx:id="periodeColumn"/>
       <TableColumn text="Total" fx:id="totalColumn"/>
@@ -27,4 +40,6 @@
       <TableColumn text="Autres" fx:id="autresColumn"/>
     </columns>
   </TableView>
+
+  <Button text="Ajouter" onAction="#onAjouterClicked"/>
 </VBox>
