--- a/src/main/resources/fr/expenses/tableau/hello-view.fxml
+++ b/src/main/resources/fr/expenses/tableau/hello-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.tableau.HelloController">
+      fx:controller="fr.expenses.tableau.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
