--- a/src/main/resources/com/example/tableau/hello-view.fxml
+++ b/src/main/resources/com/example/tableau/hello-view.fxml
@@ -5,45 +5,73 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.tableau.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.tableau.HelloController">
+  <top>
+    <VBox>
+      <MenuBar>
+        <menus>
+          <Menu text="Navigation">
+            <items>
+              <MenuItem text="Tableau" onAction="#onTableauMenuClick"/>
+              <MenuItem text="Statistiques" onAction="#onStatsMenuClick"/>
+            </items>
+          </Menu>
+          <Menu text="Options">
+            <items>
+              <MenuItem text="À propos" onAction="#onAboutMenuClick"/>
+              <MenuItem text="Quitter" onAction="#onQuitMenuClick"/>
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+    </VBox>
+  </top>
+  
+  <center>
+    <VBox alignment="CENTER" spacing="20.0">
+      <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+      </padding>
 
-  <Label text="Tableau récapitulatif des dépenses"
-         style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: blue;"
-         contentDisplay="LEFT">
-    <graphic>
-      <ImageView fitHeight="24.0" fitWidth="24.0">
-        <image>
-          <Image url="@icon.png"/>
-        </image>
-      </ImageView>
-    </graphic>
-  </Label>
+      <Label text="Tableau récapitulatif des dépenses"
+             style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: blue;"
+             contentDisplay="LEFT">
+        <graphic>
+          <ImageView fitHeight="24.0" fitWidth="24.0">
+            <image>
+              <Image url="@icon.png"/>
+            </image>
+          </ImageView>
+        </graphic>
+      </Label>
 
-  <TableView fx:id="expenseTable" stylesheets="@style.css" prefHeight="300" VBox.vgrow="ALWAYS">
-    <columns>
-      <TableColumn text="Période" fx:id="periodeColumn"/>
-      <TableColumn text="Total" fx:id="totalColumn"/>
-      <TableColumn text="Logement" fx:id="logementColumn"/>
-      <TableColumn text="Nourriture" fx:id="nourritureColumn"/>
-      <TableColumn text="Sorties" fx:id="sortiesColumn"/>
-      <TableColumn text="Voiture/Transport" fx:id="voitureTransportColumn"/>
-      <TableColumn text="Voyage" fx:id="voyageColumn"/>
-      <TableColumn text="Impôts" fx:id="impotsColumn"/>
-      <TableColumn text="Autres" fx:id="autresColumn"/>
-    </columns>
-  </TableView>
+      <TableView fx:id="expenseTable" stylesheets="@style.css" prefHeight="300" VBox.vgrow="ALWAYS">
+        <columns>
+          <TableColumn text="Période" fx:id="periodeColumn"/>
+          <TableColumn text="Total" fx:id="totalColumn"/>
+          <TableColumn text="Logement" fx:id="logementColumn"/>
+          <TableColumn text="Nourriture" fx:id="nourritureColumn"/>
+          <TableColumn text="Sorties" fx:id="sortiesColumn"/>
+          <TableColumn text="Voiture/Transport" fx:id="voitureTransportColumn"/>
+          <TableColumn text="Voyage" fx:id="voyageColumn"/>
+          <TableColumn text="Impôts" fx:id="impotsColumn"/>
+          <TableColumn text="Autres" fx:id="autresColumn"/>
+        </columns>
+      </TableView>
 
-  <HBox alignment="CENTER" spacing="10">
-    <Button text="Ajouter" onAction="#onAjouterClicked"/>
-    <Button text="Supprimer" onAction="#onSupprimerClicked"/>
-  </HBox>
-</VBox>
+      <HBox alignment="CENTER" spacing="10">
+        <Button text="Ajouter" onAction="#onAjouterClicked"/>
+        <Button text="Supprimer" onAction="#onSupprimerClicked"/>
+      </HBox>
+    </VBox>
+  </center>
+</BorderPane>
